--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<br /><br />
 			<h1 class="color__2">ร้านยังเปิดปกติ</h1>
 			<br />
-			<h1 class="color__2">ติดต่อเราได้ที่ช่องทางเหล่านี้</h1>
+			<h1 class="color__2">ติดต่อเราได้ที่ช่องทางด้านล่าง</h1>
 		</div>
 		<footer>
 			<div class="socialcontentcontainer">
