--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
 				</div>
 			</div>
 			<p class="copied">Copied!</p>
+			<div class="footerbar color__background"></div>
 		</footer>
 		<script>
 			function copyText(htmlElement) {
