--- a/main.html
+++ b/main.html
@@ -58,6 +58,7 @@
     <div class="container">
       <div class="content">
         <h1 class="daymessage"></h1>
+        <h2>อันนี้เป็นข้อความอีตโนมัติ ถ้าจะเอาชัวร์ให้โทรเช็คก่อนนะครับ</h2>
         <a
           class="timetabletrigger"
           style="
