--- a/pricing.html
+++ b/pricing.html
@@ -194,6 +194,46 @@
         </tr>
       </table>
     </div>
+    <div class="breaker">
+      <h2>A4</h2>
+          <table>
+            <tr>
+              <th>ตัวหนังสือ/เส้น CAD</th>
+              <th>อื่นๆ</th>
+            </tr>
+            </table>
+          <table>
+            <tr>
+              <th>ชนิดกระดาษ</th>
+              <th>ราคากระดาษ</th>
+            </tr>
+            <tr>
+              <td>ธรรมดา 80gsm</td>
+              <td>ไม่บวก</td>
+            </tr>
+            <tr>
+              <td>Photo มัน (พิมพ์หน้าเดียว)</td>
+              <td>+แผ่นละ 5</td>
+            </tr>
+            <tr>
+              <td>Photo มัน (พิมพ์ 2 หน้า)</td>
+              <td>+แผ่นละ 10</td>
+            </tr>
+            <tr>
+              <td>สติกเกอร์ขาวด้าน</td>
+              <td>+แผ่นละ 5</td>
+            </tr>
+            <tr>
+              <td>สติกเกอร์ใส</td>
+              <td>+แผ่นละ 30</td>
+            </tr>
+            <tr>
+              <td>ร้อยปอนด์ (200gsm)</td>
+              <td>+แผ่นละ 5</td>
+            </tr>
+          </table>
+          <h2>กระดาษอื่น(Inkjet) เอามาเองไม่บวกเพิ่ม(ไม่เกิน 200gsm)</h2>
+
     </div>
   </div>
   <footer>
