--- a/pricing.html
+++ b/pricing.html
@@ -201,28 +201,35 @@
               <th>ตัวหนังสือ/เส้น CAD</th>
               <th>อื่นๆ</th>
             </tr>
+            <tr>
+              <td>2</td>
+              <td>5</td>
+            </tr>
             </table>
-          <table>
-            <tr>
-              <th>ชนิดกระดาษ</th>
-              <th>ราคากระดาษ</th>
-            </tr>
-            <tr>
-              <td>ธรรมดา 80gsm</td>
-              <td>ไม่บวก</td>
-            </tr>
-            <tr>
-              <td>Photo มัน (พิมพ์หน้าเดียว)</td>
-              <td>+แผ่นละ 5</td>
-            </tr>
-            <tr>
-              <td>Photo มัน (พิมพ์ 2 หน้า)</td>
-              <td>+แผ่นละ 10</td>
-            </tr>
-            <tr>
-              <td>สติกเกอร์ขาวด้าน</td>
-              <td>+แผ่นละ 5</td>
-            </tr>
+    </div>
+    <div class="breaker">
+      
+      <table>
+        <tr>
+          <th>ชนิดกระดาษ</th>
+          <th>ราคากระดาษ</th>
+        </tr>
+        <tr>
+          <td>ธรรมดา 80gsm</td>
+          <td>ไม่บวก</td>
+        </tr>
+        <tr>
+          <td>Photo มัน (พิมพ์หน้าเดียว)</td>
+          <td>+แผ่นละ 5</td>
+        </tr>
+        <tr>
+          <td>Photo มัน (พิมพ์ 2 หน้า)</td>
+          <td>+แผ่นละ 10</td>
+        </tr>
+        <tr>
+          <td>สติกเกอร์ขาวด้าน</td>
+          <td>+แผ่นละ 5</td>
+        </tr>
             <tr>
               <td>สติกเกอร์ใส</td>
               <td>+แผ่นละ 30</td>
@@ -232,15 +239,16 @@
               <td>+แผ่นละ 5</td>
             </tr>
           </table>
+        </div>
           <h2>กระดาษอื่น(Inkjet) เอามาเองไม่บวกเพิ่ม(ไม่เกิน 200gsm)</h2>
-
-    </div>
-  </div>
-  <footer>
-    <ul class="links">
-      <li>
-        <a href="tel:66840257778" target="_blank">
-          <svg
+          
+        </div>
+      </div>
+      <footer>
+        <ul class="links">
+          <li>
+            <a href="tel:66840257778" target="_blank">
+              <svg
             xmlns="http://www.w3.org/2000/svg"
             class="icon icon-tabler icon-tabler-phone"
             width="24"
