--- a/pricing.html
+++ b/pricing.html
@@ -169,7 +169,6 @@
       </table>
     </div>
     <div class="breaker">
-
       <h2>Canvas(ผ้า)</br></h2>
       <table>
         <tr>
@@ -208,7 +207,7 @@
             </table>
     </div>
     <div class="breaker">
-      
+      <h2>ชนิดกระดาษ</h2>
       <table>
         <tr>
           <th>ชนิดกระดาษ</th>
@@ -241,7 +240,6 @@
           </table>
         </div>
           <h2>กระดาษอื่น(Inkjet) เอามาเองไม่บวกเพิ่ม(ไม่เกิน 200gsm)</h2>
-          
         </div>
       </div>
       <footer>
