--- a/pricing.html
+++ b/pricing.html
@@ -169,6 +169,7 @@
       </table>
     </div>
     <div class="breaker">
+
       <h2>Canvas(ผ้า)</br></h2>
       <table>
         <tr>
@@ -195,19 +196,8 @@
     </div>
     <div class="breaker">
       <h2>A4</h2>
-          <table>
-            <tr>
-              <th>ตัวหนังสือ/เส้น CAD</th>
-              <th>อื่นๆ</th>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>5</td>
-            </tr>
-            </table>
-    </div>
-    <div class="breaker">
-      <h2>ชนิดกระดาษ</h2>
+      <h2>ข้อคาม/เส้น CAD หน้าละ 2 บาท</h2>
+      <h2>รูปภาพและอื่นๆ หน้าละ 5 บาท</h2>
       <table>
         <tr>
           <th>ชนิดกระดาษ</th>
@@ -238,8 +228,8 @@
               <td>+แผ่นละ 5</td>
             </tr>
           </table>
+          <h2>กระดาษ Inkjet อื่นๆ เอามาเองได้ ไม่บวกเพิ่ม(ไม่เกิน 200gsm)</h2>
         </div>
-          <h2>กระดาษอื่น(Inkjet) เอามาเองไม่บวกเพิ่ม(ไม่เกิน 200gsm)</h2>
         </div>
       </div>
       <footer>
