--- a/pricing.html
+++ b/pricing.html
@@ -196,7 +196,7 @@
     </div>
     <div class="breaker">
       <h2>A4</h2>
-      <h2>ข้อคาม/เส้น CAD หน้าละ 2 บาท</h2>
+      <h2>ตัวหนังสือ/เส้น CAD หน้าละ 2 บาท</h2>
       <h2>รูปภาพและอื่นๆ หน้าละ 5 บาท</h2>
       <table>
         <tr>
