--- a/main.html
+++ b/main.html
@@ -78,38 +78,38 @@
             </tr>
             <tr>
               <td>อาทิตย์</td>
-              <td class="redx">✖</td>
-              <td class="greencheck">✔</td>
+              <td class="redx">ปิด ✖</td>
+              <td class="greencheck">เปิด ✔</td>
             </tr>
             <tr>
               <td>จันทร์</td>
-              <td class="greencheck">✔</td>
-              <td class="greencheck">✔</td>
+              <td class="greencheck"> เปิด ✔</td>
+              <td class="greencheck"> เปิด ✔</td>
             </tr>
             <tr>
               <td>อังคาร</td>
-              <td class="greencheck">✔</td>
-              <td class="greencheck">✔</td>
+              <td class="greencheck"> เปิด ✔</td>
+              <td class="greencheck"> เปิด ✔</td>
             </tr>
             <tr>
               <td>พุธ</td>
-              <td class="greencheck">✔</td>
-              <td class="greencheck">✔</td>
+              <td class="greencheck"> เปิด ✔</td>
+              <td class="greencheck"> เปิด ✔</td>
             </tr>
             <tr>
               <td>พฤหัสฯ</td>
-              <td class="greencheck">✔</td>
-              <td class="greencheck">✔</td>
+              <td class="greencheck"> เปิด ✔</td>
+              <td class="greencheck"> เปิด ✔</td>
             </tr>
             <tr>
               <td>ศุกร์</td>
-              <td class="greencheck">✔</td>
-              <td class="greencheck">✔</td>
+              <td class="greencheck"> เปิด ✔</td>
+              <td class="greencheck"> เปิด ✔</td>
             </tr>
             <tr>
               <td>เสาร์</td>
-              <td class="redx">✖</td>
-              <td class="redx">✖</td>
+              <td class="redx">ปิด ✖</td>
+              <td class="redx">ปิด ✖</td>
             </tr>
           </table>
           <br />
