--- a/pricing.html
+++ b/pricing.html
@@ -62,31 +62,31 @@
           <table class="pricingtable">
             <tr>
               <th></th>
-              <th>A3</th>
-              <th>A2</th>
-              <th>A1</th>
               <th>A0</th>
+              <th>A1</th>
+              <th>A2</th>
+              <th>A3</th>
             </tr>
             <tr>
-              <td>เส้น CAD</td>
-              <td>10</td>
-              <td>20</td>
-              <td>40</td>
-              <td>60</td>
+              <td class="not-furthest-right">เส้น CAD</td>
+              <td class="not-furthest-right">60.-</td>
+              <td class="not-furthest-right">40.-</td>
+              <td class="not-furthest-right">20.-</td>
+              <td>10.-</td>
             </tr>
             <tr>
-              <td>รูป/กราฟิค</td>
-              <td>15</td>
-              <td>40</td>
-              <td>80</td>
-              <td>160</td>
+              <td class="not-furthest-right">รูป/กราฟิค</td>
+              <td class="not-furthest-right">160.-</td>
+              <td class="not-furthest-right">80.-</td>
+              <td class="not-furthest-right">40.-</td>
+              <td>15.-</td>
             </tr>
             <tr>
-              <td>สีเต็มทั้งแผ่น</td>
-              <td>30</td>
-              <td>60</td>
-              <td>120</td>
-              <td>240</td>
+              <td class="not-furthest-right">สีเต็มทั้งแผ่น</td>
+              <td class="not-furthest-right">240.-</td>
+              <td class="not-furthest-right">120.-</td>
+              <td class="not-furthest-right">60.-</td>
+              <td>30.-</td>
             </tr>
           </table>
         </div>
@@ -96,23 +96,23 @@
           <table>
             <tr>
               <th></th>
-              <th>A2</th>
               <th>A1</th>
+              <th>A2</th>
             </tr>
             <tr>
-              <td>เส้น CAD</td>
-              <td>50</td>
-              <td>100</td>
+              <td class="not-furthest-right">เส้น CAD</td>
+              <td class="not-furthest-right">100.-</td>
+              <td>50.-</td>
             </tr>
             <tr>
-              <td>รูป/กราฟิค</td>
-              <td>70</td>
-              <td>140</td>
+              <td class="not-furthest-right">รูป/กราฟิค</td>
+              <td class="not-furthest-right">140.-</td>
+              <td>70.-</td>
             </tr>
             <tr>
-              <td>สีเต็มทั้งแผ่น</td>
-              <td>90</td>
-              <td>180</td>
+              <td class="not-furthest-right">สีเต็มทั้งแผ่น</td>
+              <td class="not-furthest-right">180.-</td>
+              <td>90.-</td>
             </tr>
           </table>
         </div>
@@ -122,23 +122,23 @@
           <table>
             <tr>
               <th></th>
-              <th>A3</th>
               <th>A2</th>
+              <th>A3</th>
             </tr>
             <tr>
-              <td>เส้น CAD</td>
-              <td>20</td>
-              <td>40</td>
+              <td class="not-furthest-right">เส้น CAD</td>
+              <td class="not-furthest-right">40.-</td>
+              <td>20.-</td>
             </tr>
             <tr>
-              <td>รูป/กราฟิค</td>
-              <td>25</td>
-              <td>60</td>
+              <td class="not-furthest-right">รูป/กราฟิค</td>
+              <td class="not-furthest-right">60.-</td>
+              <td>25.-</td>
             </tr>
             <tr>
-              <td>สีเต็มทั้งแผ่น</td>
-              <td>40</td>
-              <td>80</td>
+              <td class="not-furthest-right">สีเต็มทั้งแผ่น</td>
+              <td class="not-furthest-right">80.-</td>
+              <td>40.-</td>
             </tr>
           </table>
         </div>
@@ -148,23 +148,23 @@
           <table>
             <tr>
               <th></th>
-              <th>A2</th>
               <th>A1</th>
+              <th>A2</th>
         </tr>
         <tr>
-          <td>เส้น CAD</td>
-          <td>120</td>
-          <td>60</td>
+          <td class="not-furthest-right">เส้น CAD</td>
+          <td class="not-furthest-right">120.-</td>
+          <td>60.-</td>
         </tr>
         <tr>
-          <td>รูป/กราฟิค</td>
-          <td>160</td>
-          <td>80</td>
+          <td class="not-furthest-right">รูป/กราฟิค</td>
+          <td class="not-furthest-right">160.-</td>
+          <td>80.-</td>
         </tr>
         <tr>
-          <td>สีเต็มทั้งแผ่น</td>
-          <td>200</td>
-          <td>100</td>
+          <td class="not-furthest-right">สีเต็มทั้งแผ่น</td>
+          <td class="not-furthest-right">200.-</td>
+          <td>100.-</td>
         </tr>
       </table>
     </div>
@@ -174,61 +174,61 @@
       <table>
         <tr>
           <th></th>
-          <th>A2</th>
           <th>A1</th>
+          <th>A2</th>
         </tr>
         <tr>
-          <td>เส้น CAD</td>
-          <td>100</td>
-          <td>180</td>
+          <td class="not-furthest-right">เส้น CAD</td>
+          <td class="not-furthest-right">180.-</td>
+          <td>100.-</td>
         </tr>
         <tr>
-          <td>รูป/กราฟิค</td>
-          <td>120</td>
-          <td>220</td>
+          <td class="not-furthest-right">รูป/กราฟิค</td>
+          <td class="not-furthest-right">220.-</td>
+          <td>120.-</td>
         </tr>
         <tr>
-          <td>สีเต็มทั้งแผ่น</td>
-          <td>140</td>
-          <td>260</td>
+          <td class="not-furthest-right">สีเต็มทั้งแผ่น</td>
+          <td class="not-furthest-right">260.-</td>
+          <td>140.-</td>
         </tr>
       </table>
     </div>
     <div class="breaker">
       <h2>A4</h2>
-      <h2>ตัวหนังสือ/เส้น CAD หน้าละ 2 บาท</h2>
-      <h2>รูปภาพและอื่นๆ หน้าละ 5 บาท</h2>
+      <p>ตัวหนังสือ/เส้น CAD หน้าละ 2 บาท</p>
+      <p>รูปภาพและอื่นๆ หน้าละ 5 บาท</p>
       <table>
         <tr>
           <th>ชนิดกระดาษ</th>
           <th>ราคากระดาษ</th>
         </tr>
         <tr>
-          <td>ธรรมดา 80gsm</td>
+          <td class="not-furthest-right">ธรรมดา 80gsm</td>
           <td>ไม่บวก</td>
         </tr>
         <tr>
-          <td>Photo มัน (พิมพ์หน้าเดียว)</td>
-          <td>+แผ่นละ 5</td>
+          <td class="not-furthest-right">Photo มัน (พิมพ์หน้าเดียว)</td>
+          <td>+แผ่นละ 5.-</td>
         </tr>
         <tr>
-          <td>Photo มัน (พิมพ์ 2 หน้า)</td>
-          <td>+แผ่นละ 10</td>
+          <td class="not-furthest-right">Photo มัน (พิมพ์ 2 หน้า)</td>
+          <td>+แผ่นละ 10.-</td>
         </tr>
         <tr>
-          <td>สติกเกอร์ขาวด้าน</td>
-          <td>+แผ่นละ 5</td>
+          <td class="not-furthest-right">สติกเกอร์ขาวด้าน</td>
+          <td>+แผ่นละ 5.-</td>
         </tr>
             <tr>
-              <td>สติกเกอร์ใส</td>
-              <td>+แผ่นละ 30</td>
+              <td class="not-furthest-right">สติกเกอร์ใส</td>
+              <td>+แผ่นละ 30.-</td>
             </tr>
             <tr>
-              <td>ร้อยปอนด์ (200gsm)</td>
-              <td>+แผ่นละ 5</td>
+              <td class="not-furthest-right">ร้อยปอนด์ (200gsm)</td>
+              <td>+แผ่นละ 5.-</td>
             </tr>
           </table>
-          <h2>กระดาษ Inkjet อื่นๆ เอามาเองได้ ไม่บวกเพิ่ม(ไม่เกิน 200gsm)</h2>
+          <p><br>กระดาษ Inkjet อื่นๆ เอามาเองได้ ไม่บวกเพิ่ม(ไม่เกิน 200gsm)</p>
         </div>
         </div>
       </div>
