--- a/contact.html
+++ b/contact.html
@@ -185,6 +185,7 @@
               </button>
             </div>
           </div>
+        </div>
           
         <div class="breaker">
           <svg
