--- a/main.html
+++ b/main.html
@@ -62,8 +62,9 @@
     </div>
     <div class="container">
       <div class="content">
-        <h1 class="daymessage"></h1>
-        <h2 style="text-align:center;">อันนี้เป็นข้อความอัตโนมัติ<br>ถ้าจะเอาชัวร์ให้โทรเช็คก่อนนะครับ</h2>
+        <h1>ช่วงนี้ร้านไม่ได้เปิดตามเวลาปกติ จะกลับมาเปิดปกติอีกครั้งเดือนกรกฎาคม</h1>
+        <!-- <h1 class="daymessage"></h1>
+        <h2 style="text-align:center;">อันนี้เป็นข้อความอัตโนมัติ<br>ถ้าจะเอาชัวร์ให้โทรเช็คก่อนนะครับ</h2> //-->
         <a
           class="timetabletrigger"
           style="
@@ -236,7 +237,7 @@
       Copyright &copy; 2022, Jimm Print. All Rights Reserved
     </p>
   </footer>
-  <script>
+<script> <!--
       const dayMessage = document.querySelector(".daymessage");
 
       let dayName = new Date();
@@ -291,6 +292,6 @@
           timetablediv.setAttribute("data-visible", false);
         }
       };
-    </script>
+    //--></script>
   </body>
 </html>
