--- a/main.html
+++ b/main.html
@@ -62,7 +62,8 @@
     </div>
     <div class="container">
       <div class="content">
-        <h1>ช่วงนี้ร้านไม่ได้เปิดตามเวลาปกติ จะกลับมาเปิดปกติอีกครั้งเดือนกรกฎาคม</h1>
+        <h1>ช่วงนี้ร้านไม่ได้เปิดตามเวลาปกติ</h1>
+        <h1>จะกลับมาเปิดปกติอีกครั้งเดือนกรกฎาคม</h1>
         <!-- <h1 class="daymessage"></h1>
         <h2 style="text-align:center;">อันนี้เป็นข้อความอัตโนมัติ<br>ถ้าจะเอาชัวร์ให้โทรเช็คก่อนนะครับ</h2> //-->
         <a
