--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
   </head>
   <body>
     <div class="mainsnake">
-      <svg
+      <img id="bigsnake" src="images/bigsnake.png" alt="Picture of Orphic Egg ">
+      <!-- <svg
         id="bigsnake"
         data-name="Layer 1"
         xmlns="http://www.w3.org/2000/svg"
@@ -104,7 +105,7 @@
           class="cls-1"
           d="M29.64,238.19h0c4.25,17.29,22.5,31.38,37.35,39.38,16.4,8.84,34.57,13.77,52.51,18.41,30.7,7.95,61.83,10.37,93,15.24,7.56,1.18,15.33,2.44,22.14,5.78v-.07c.19-.82,1.4-6.2,1.87-9,.29-1.87.74-7,1.44-14l0-.07c.72-6.48,1.57-20.28,1.64-21.48l0-.09c-1.05-.07-49.63-3.33-71.31-8.41a329.77,329.77,0,0,1-66.91-23.5c-18.13-8.67-35.71-19.19-49.47-33.84a97.47,97.47,0,0,1-6.67-7.91l0,0c-1.41,2.6-4.82,9.06-6.44,12.43-.92,2.2-4.41,10.51-5.2,12.75C32.84,225.88,30.22,236.15,29.64,238.19Z"
         />
-      </svg>
+      </svg> -->
       <div>
         <p style="user-select: none;">Hoc monstrum generat,<br />perficit ignis et Azoch.</p>
       </div>
