--- a/unlist.html
+++ b/unlist.html
@@ -117,10 +117,9 @@
               async
               defer
             ></script>
-            <p id="map" class="content-text">
+            <input readonly id="map" class="content-text" value="
               176/5<br />ซ.สมเด็จพระปิ่นเกล้า 19 อรุณอมรินทร์ บางกอกน้อย
-              กรุงเทพฯ 10700
-            </p>
+              กรุงเทพฯ 10700"/>
             <div class="buttonwrap">
               <button id="copymap">Copy</button>
               <button
