--- a/unlist.html
+++ b/unlist.html
@@ -118,7 +118,7 @@
               defer
             ></script>
             <input readonly id="map" class="content-text" value="
-              176/5<br />ซ.สมเด็จพระปิ่นเกล้า 19 อรุณอมรินทร์ บางกอกน้อย
+              176/5 ซ.สมเด็จพระปิ่นเกล้า 19 อรุณอมรินทร์ บางกอกน้อย
               กรุงเทพฯ 10700"/>
             <div class="buttonwrap">
               <button id="copymap">Copy</button>
