--- a/unlist.html
+++ b/unlist.html
@@ -379,8 +379,8 @@ function copyText(htmlInputElement) {
       <!-- let inputElement = document.createElement("input"); -->
       let noti = document.querySelector(".noti");
       
-      <!-- inputElement.setAttribute("value", elementText);
-      document.body.appendChild(inputElement); -->
+      <!-- inputElement.setAttribute("value", elementText); -->
+      <!-- document.body.appendChild(inputElement); -->
       elementText.select();
       document.execCommand("copy");
       <!-- inputElement.parentNode.removeChild(inputElement); -->
