--- a/unlist.html
+++ b/unlist.html
@@ -117,9 +117,7 @@
               async
               defer
             ></script>
-            <input readonly id="map" class="content-text" value="
-              176/5 ซ.สมเด็จพระปิ่นเกล้า 19 อรุณอมรินทร์ บางกอกน้อย
-              กรุงเทพฯ 10700"/>
+            <input readonly id="map" class="content-text" value="176/5 ซ.สมเด็จพระปิ่นเกล้า 19 อรุณอมรินทร์ บางกอกน้อย กรุงเทพฯ 10700"/>
             <div class="buttonwrap">
               <button id="copymap">Copy</button>
               <button
@@ -151,7 +149,7 @@
           </svg>
           <h2 style="display: inline">&nbsp อีเมล</h2>
           <div class="socialcontent" data-tab="email">
-            <p id="email" class="content-text">jimmprint.pinklao@gmail.com</p>
+            <input readonly id="email" class="content-text" value="jimmprint.pinklao@gmail.com" />
             <div class="buttonwrap">
               <button id="copyemail">Copy</button>
               <button
@@ -182,7 +180,7 @@
           </svg>
           <h2 style="display: inline">&nbsp โทรศัพท์</h2>
           <div class="socialcontent" data-tab="phone">
-            <p id="phone" class="content-text">0840257778</p>
+            <input readonly id="phone" class="content-text" value="0840257778"/>
             <div class="buttonwrap">
               <button id="copyphone">Copy</button>
               <button onclick="window.open('tel:66840257778','_blank')">
@@ -211,7 +209,7 @@
           </svg>
           <h2 style="display: inline">&nbsp facebook</h2>
           <div class="socialcontent" data-tab="facebook">
-            <p id="facebook" class="content-text">facebook.com/jimmprint</p>
+            <input readonly id="facebook" class="content-text" value="facebook.com/jimmprint"/>
             <div class="buttonwrap">
               <button id="copyfacebook">Copy</button>
               <button
@@ -242,7 +240,7 @@
           <h2 style="display: inline">&nbsp line</h2>
           <div class="socialcontent" data-tab="line">
             <img src="images/lineqr.png" alt="line" style="display: inline" />
-            <p id="line" class="content-text">@596ysfkn</p>
+            <input readonly id="line" class="content-text" value="@596ysfkn"/>
             <div class="buttonwrap">
               <button id="copyline">Copy</button>
               <button onclick=" window.open('https://lin.ee/zJuSeeB','_blank')">
