--- a/unlist.html
+++ b/unlist.html
@@ -117,7 +117,7 @@
               async
               defer
             ></script>
-            <input readonly id="map" class="content-text" value="176/5 ซ.สมเด็จพระปิ่นเกล้า 19 อรุณอมรินทร์ บางกอกน้อย กรุงเทพฯ 10700"/>
+            <input readonly id="map" class="content-text" size="70" value="176/5 ซ.สมเด็จพระปิ่นเกล้า 19 อรุณอมรินทร์ บางกอกน้อย กรุงเทพฯ 10700"/>
             <div class="buttonwrap">
               <button id="copymap">Copy</button>
               <button
